--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,26 @@
 project(GL_Basics)
 cmake_minimum_required(VERSION 2.8)
+set ( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake )
+
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/include
     ${CMAKE_CURRENT_SOURCE_DIR}/modules/glm
     )
 
 add_executable( ${PROJECT_NAME} main.cpp glad.c )
-target_link_libraries( ${PROJECT_NAME} -ldl )
+
+if(NOT WIN32)
+    target_link_libraries( ${PROJECT_NAME} -ldl )
+endif()
 
 find_package ( SDL2 REQUIRED )
 include_directories( ${SDL2_INCLUDE_DIR}  )
-target_link_libraries( ${PROJECT_NAME} "${SDL2_LIBRARIES} -lm" )
+
+if(NOT WIN32)
+    target_link_libraries( ${PROJECT_NAME} "${SDL2_LIBRARY} -lm" )
+else()
+    target_link_libraries( ${PROJECT_NAME} "${SDL2_LIBRARY}" )
+endif()
 
 add_custom_command (
     TARGET ${PROJECT_NAME}
