- Fixes for Windows/VS support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,20 @@
 project(GL_Basics)
 cmake_minimum_required(VERSION 2.8)
+
+set ( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake )
+
 aux_source_directory(. SRC_LIST)
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/include )
 
 add_executable( ${PROJECT_NAME} ${SRC_LIST} )
-target_link_libraries( ${PROJECT_NAME} -ldl )
+if(NOT WIN32)
+    target_link_libraries( ${PROJECT_NAME} -ldl )
+endif()
 
 find_package ( SDL2 REQUIRED )
 include_directories( ${SDL2_INCLUDE_DIR}  )
-target_link_libraries( ${PROJECT_NAME} "${SDL2_LIBRARIES} -lm" )
+if(NOT WIN32)
+    target_link_libraries( ${PROJECT_NAME} "${SDL2_LIBRARY} -lm" )
+else()
+    target_link_libraries( ${PROJECT_NAME} "${SDL2_LIBRARY}" )
+endif()
